--- a/css/index.css
+++ b/css/index.css
@@ -77,10 +77,27 @@ header .container{
   
 }
 
+@media(max-width: 500px){
+  header .container {
+    align-items: center;
+    flex-direction: column;
+    margin-left: 0;
+    margin-bottom: 10px;
+  }
+}
+
 header nav {
   display: flex;
   justify-content: center;
   margin-top:35px;
+}
+
+@media(max-width: 500px){
+  header nav {
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 0;
+  }
 }
 
 header nav a {
@@ -90,8 +107,30 @@ header nav a {
   text-decoration: none;
 }
 
+@media(max-width: 500px){
+  header nav a {
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    font-size: 1.8rem;
+    margin-right: 0;
+    margin-top: 30px;
+    border-bottom: solid 1px;
+    align-content: center;
+    font-size: 40px;
+    width: 100%;
+    
+  }
+}
+
 header nav a:hover {
   text-decoration: underline;
+}
+
+@media(max-width: 500px){
+  header nav a:hover{
+    text-decoration: none;
+  }
 }
 
 header nav a:first-child {
@@ -102,18 +141,36 @@ header nav a:last-child {
   margin-right: 40px;
 }
 
+@media(max-width: 500px){
+  header nav a:last-child{
+    margin-right: 0;
+  }
+}
 
 header .logo {
   margin-top: 20px;
 }
 
+@media(max-width: 500px){
+  header .logo{
+    margin-top: 30px;
+    width: auto;
+    order: -1;
+  }
+}
 /* cta */
 
 .cta .container{
   display: flex;
 }
+
+@media(max-width: 500px){
+  .cta .container{
+    display: inline;
+  }
+}
+
 .cta .cta-text {
-  /* display: inline-block; */
   vertical-align: top;
   font-size: 77px;
   margin-top: 120px;
@@ -121,6 +178,15 @@ header .logo {
   padding: 0px 75px;
 }
 
+@media(max-width: 500px){
+  .cta .cta-text {
+    margin-top:100px;
+    justify-content: center;
+    justify-items: center;
+    align-content: center;
+    align-items: center;
+  }
+}
 .cta .cta-text button {
   background: white;
   vertical-align: top;
@@ -141,6 +207,11 @@ header .logo {
   margin-top: 69px;
 }
 
+@media(max-width: 500px){
+  .cta img {
+    display: none;
+  }
+}
 .divider {
   margin: 40px 0;
 }
